# petrocaf-pricing-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.json
data/input/: boq_sample.csv
data/master/: coefficients.csv  discipline_rules.csv  indirects.csv  markups.csv  productivities.csv  scenario_factors.csv
docs/: REPO_EVOLUTION.md
scripts/: build_sqlite.bat  build_sqlite.py  init_repo.bat  run_pricing.bat  run_pricing.py  validate_inputs.bat  validate_inputs.py
src/petrocaf_pricing/: data_sqlite_builder.py
src/petrocaf_pricing/cli/: main.py
src/petrocaf_pricing/core/: workflow.py
src/petrocaf_pricing/engines/: lookup_engine.py  pricing_engine.py
src/petrocaf_pricing/io/: config_loader.py  csv_io.py
src/petrocaf_pricing/models/: pricing_models.py
src/petrocaf_pricing/services/: master_data_service.py  scenario_service.py  validation_service.py
src/petrocaf_pricing/utils/: logging_utils.py  math_utils.py  path_utils.py
tests/: test_smoke.py
tools/: generate_petrocaf_pricing_workbook.py
