[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petrocaf-pricing-engine"
version = "1.0.0"
description = "PETROCAF EPC pricing engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.2.0", "openpyxl>=3.1.0", "pydantic>=2.7.0"]

[project.scripts]
petrocaf-pricing = "petrocaf_pricing.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
